# pico_planter_rs

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
