[package]
name = "pico_planter"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.2"
cortex-m-semihosting = "0.5.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }

panic-halt = "0.2.0"
panic-semihosting = "0.6.0"

rp-pico = "0.3.0"

rp2040-monotonic = "1.0.0"
rp2040-hal = { version="0.4.0", features=["rt"] }
rp2040-boot2 = "0.2.0"